# ai-chat-bot

./: .gitignore  GEMINI_IMPLEMENTATION.md  README.md  SERPAPI_QUICK_REFERENCE.md  main.py  pyproject.toml  requirements.txt  test_gemini_examples.py  validate_tools.py
tests/: .env.advanced.template  ADVANCED_TOOLS_SETUP.md  GEMINI_IMPLEMENTATION.md  GEMINI_TOOLS_INTEGRATION.md  SERPAPI_CHANGES.md  SERPAPI_INTEGRATION.md  SERPAPI_UPDATE_SUMMARY.md  TOOLS_GUIDE.md  database_schema.sql  hh.md  tools_advanced.py  tools_example.py
