[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiolimiter==1.2.1",
    "anyio==4.13.0",
    "apscheduler==3.11.2",
    "cachetools==7.1.4",
    "certifi==2026.5.20",
    "dotenv==0.9.9",
    "google-genai>=2.8.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "idna==3.18",
    "openai>=2.43.0",
    "openrouter>=0.10.0",
    "python-dotenv==1.2.2",
    "python-telegram-bot==22.7",
    "tornado==6.5.6",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
]
